make some changes

--- a/index.html
+++ b/index.html
@@ -16,21 +16,28 @@
                 <img src="assets/images/logo.jpg" alt="Nike's logo">
             </div>
             <div class="container">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>         
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
             <nav class="nav">
                 <a href="/">Lifestyle</a>
                 <a href="#">Running</a>
                 <a href="#">Football</a>
                 <a href="#">Skateboarding</a>
-            </nav>            
+            </nav>
         </header>
         <div class="white-sheet-1"></div>
         <div class="white-sheet-2"> </div>
         <div class="card">
             <div class="product-photo">
-                <img class="image-big" src="assets/images/img_h.jpg" height="50%" width="50%" alt="big image of skechers">
+                <img class="image-big" src="assets/images/img_h.jpg" height="60%" width="60%" alt="big image of skechers">
+                <div class="image-small"><img class="image-small" src="assets/images/img1.jpg" alt="small image of skechers">
+                    <img class="image-small" src="assets/images/img1.jpg" alt="small image of skechers">
+                    <img class="image-small" src="assets/images/img1.jpg" alt="small image of skechers"></div>
+            </div>
+            <div class="product-information">
+                <div class="new">New</div>
+                <h1>The <span>running</span><br /> has just begun</h1>
             </div>
         </div>
     </div>
